<resources>
    <string name="app_name">Translater</string>
    <string name="title_activity_main">Translater</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="lang_from_prompt">Translate from language</string>
    <string name="lang_to_prompt">Translate to language</string>

    <string-array name="translate_lang_array">
        <item>Croatian</item>
        <item>Slovenian</item>
    </string-array>

    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>

    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="confirm_password_error">Password cannot be empty</string>


</resources>
